New: Create interface About-Us

--- a/ProductivityHub-FE/src/app/pages/home/home.component.html
+++ b/ProductivityHub-FE/src/app/pages/home/home.component.html
@@ -5,8 +5,8 @@
             <a href="#" class="logo">PG <b>Graphics</b></a>
             <ul class="links">
               <li>Home</li>
-              <li>About Us</li>
-              <li>Dashboard</li>
+              <li><a href="/about-us" >About Us</a></li>
+              <li><a href="/dashboard" >Dashboard</a></li>
               <li><a href="/login" class="login">Login</a></li>
             </ul>
           </div>
