Change: Layout changes

--- a/ProductivityHub-FE/src/app/pages/login/login.component.html
+++ b/ProductivityHub-FE/src/app/pages/login/login.component.html
@@ -1,46 +1,84 @@
-<body class="align">
+<body>
+  <section class="background-radial-gradient overflow-hidden">
+    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+      <div class="row gx-lg-5 align-items-center mb-5">
+        <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+            The best manager <br />
+            <span style="color: hsl(218, 81%, 75%)">for your business</span>
+          </h1>
+          <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+            A “Productivity Hub” is a web application aimed at workers with busy lives who need to better manage their
+            tasks, appointments and documents.
+          </p>
+        </div>
 
-  <div class="grid">
+        <div class="col-lg-6 mb-3 mb-lg-0 position-relative">
+          <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+          <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
 
-    <form action="#" method="POST" class="form login">
+          <div class="card bg-glass">
+            <div class="card-body px-4 py-5 px-md-5">
+              <label class="text-center mb-5">Enter your login credentials for access</label>
+              <form>
+                <!-- Email input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <label class="form-label" for="form3Example3"><svg class="icon">
+                      <use xlink:href="#icon-user"></use>
+                    </svg> Username</label>
+                  <input type="email" id="form3Example3" class="form-control" required [(ngModel)]="loginObj.UserName"
+                    name="UserName" />
+                </div>
 
-      <div class="form__field">
-        <label for="login__username"><svg class="icon">
-            <use xlink:href="#icon-user"></use>
-          </svg><span class="hidden">Username</span></label>
-        <input autocomplete="username" id="login__username" type="text" class="form__input" placeholder="Username" required [(ngModel)]="loginObj.UserName" name="UserName" >
+                <!-- Password input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <label class="form-label" for="form3Example4"><svg class="icon">
+                    <use xlink:href="#icon-lock"></use>
+                  </svg> Password</label>
+                  <input type="password" id="form3Example4" class="form-control" required
+                    [(ngModel)]="loginObj.Password" name="password" />
+                </div>
+
+
+                <!-- Submit button -->
+                <button type="submit" value="Sign In" data-mdb-button-init data-mdb-ripple-init (click)="onLogin()"
+                  class="btn btn-primary btn-block mb-4">
+                  Sign up
+                </button>
+
+
+                <p class="text--center ">Not a member? <a href="/register" class="text-decoration-none">Sign up now</a></p>
+
+                <!-- Register buttons -->
+                <div class="text-center">
+                  <p>or sign up with:</p>
+                  <button type="button" data-mdb-button-init data-mdb-ripple-init
+                    class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-google"></i>
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="form__field">
-        <label for="login__password"><svg class="icon">
-            <use xlink:href="#icon-lock"></use>
-          </svg><span class="hidden">Password</span></label>
-        <input id="login__password" type="password"  class="form__input" placeholder="Password" required required [(ngModel)]="loginObj.Password" name="password">
-      </div>
-
-      <div class="form__field">
-        <input type="submit" value="Sign In" (click)="onLogin()">
-      </div>
-
-    </form>
-
-    <p class="text--center">Not a member? <a href="/register">Sign up now</a> <svg class="icon">
-        <use xlink:href="#icon-arrow-right"></use>
-      </svg></p>
-
-  </div>
-
+    </div>
+  </section>
+  <!-- Section: Design Block -->
   <svg xmlns="http://www.w3.org/2000/svg" class="icons">
     <symbol id="icon-arrow-right" viewBox="0 0 1792 1792">
-      <path d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293H245q-52 0-84.5-37.5T128 1024V896q0-53 32.5-90.5T245 768h704L656 474q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z" />
+      <path
+        d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293H245q-52 0-84.5-37.5T128 1024V896q0-53 32.5-90.5T245 768h704L656 474q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z" />
     </symbol>
     <symbol id="icon-lock" viewBox="0 0 1792 1792">
-      <path d="M640 768h512V576q0-106-75-181t-181-75-181 75-75 181v192zm832 96v576q0 40-28 68t-68 28H416q-40 0-68-28t-28-68V864q0-40 28-68t68-28h32V576q0-184 132-316t316-132 316 132 132 316v192h32q40 0 68 28t28 68z" />
+      <path
+        d="M640 768h512V576q0-106-75-181t-181-75-181 75-75 181v192zm832 96v576q0 40-28 68t-68 28H416q-40 0-68-28t-28-68V864q0-40 28-68t68-28h32V576q0-184 132-316t316-132 316 132 132 316v192h32q40 0 68 28t28 68z" />
     </symbol>
     <symbol id="icon-user" viewBox="0 0 1792 1792">
-      <path d="M1600 1405q0 120-73 189.5t-194 69.5H459q-121 0-194-69.5T192 1405q0-53 3.5-103.5t14-109T236 1084t43-97.5 62-81 85.5-53.5T538 832q9 0 42 21.5t74.5 48 108 48T896 971t133.5-21.5 108-48 74.5-48 42-21.5q61 0 111.5 20t85.5 53.5 62 81 43 97.5 26.5 108.5 14 109 3.5 103.5zm-320-893q0 159-112.5 271.5T896 896 624.5 783.5 512 512t112.5-271.5T896 128t271.5 112.5T1280 512z" />
+      <path
+        d="M1600 1405q0 120-73 189.5t-194 69.5H459q-121 0-194-69.5T192 1405q0-53 3.5-103.5t14-109T236 1084t43-97.5 62-81 85.5-53.5T538 832q9 0 42 21.5t74.5 48 108 48T896 971t133.5-21.5 108-48 74.5-48 42-21.5q61 0 111.5 20t85.5 53.5 62 81 43 97.5 26.5 108.5 14 109 3.5 103.5zm-320-893q0 159-112.5 271.5T896 896 624.5 783.5 512 512t112.5-271.5T896 128t271.5 112.5T1280 512z" />
     </symbol>
   </svg>
 
-</body>
 
+</body>
