--- a/ProductivityHub-FE/src/app/pages/register/register.component.css
+++ b/ProductivityHub-FE/src/app/pages/register/register.component.css
@@ -1,46 +1,42 @@
-/* config.css */
-
-:root {
-  --baseColor: #606468;
+.background-radial-gradient {
+  background-color: hsl(218, 41%, 15%);
+  background-image: radial-gradient(650px circle at 0% 0%,
+      hsl(218, 41%, 35%) 15%,
+      hsl(218, 41%, 30%) 35%,
+      hsl(218, 41%, 20%) 75%,
+      hsl(218, 41%, 19%) 80%,
+      transparent 100%),
+    radial-gradient(1250px circle at 100% 100%,
+      hsl(218, 41%, 45%) 15%,
+      hsl(218, 41%, 30%) 35%,
+      hsl(218, 41%, 20%) 75%,
+      hsl(218, 41%, 19%) 80%,
+      transparent 100%);
 }
 
-/* helpers/align.css */
-
-.align {
-  display: grid;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  justify-items: center;
-  place-items: center;
-}
-
-.grid {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 20rem;
-}
-
-/* helpers/hidden.css */
-
-.hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
+#radius-shape-1 {
+  height: 220px;
+  width: 220px;
+  top: -60px;
+  left: -130px;
+  background: radial-gradient(#44006b, #ad1fff);
   overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
 }
 
-/* helpers/icon.css */
-
-:root {
-  --iconFill: var(--baseColor);
+#radius-shape-2 {
+  border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+  bottom: -60px;
+  right: -110px;
+  width: 300px;
+  height: 300px;
+  background: radial-gradient(#44006b, #ad1fff);
+  overflow: hidden;
 }
 
+.bg-glass {
+  background-color: hsla(0, 0%, 100%, 0.9) !important;
+  backdrop-filter: saturate(200%) blur(25px);
+}
 .icons {
   display: none;
 }
@@ -52,185 +48,4 @@
   fill: var(--iconFill);
   width: 1em;
   vertical-align: middle;
-}
-
-/* layout/base.css */
-
-
-* {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 100%;
-  font-size: var(--htmlFontSize);
-}
-
-body {
-  background-color: #2c3338;
-  background-color: var(--bodyBackgroundColor);
-  color: #606468;
-  color: var(--bodyColor);
-  font-family: "Open Sans", sans-serif;
-  font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
-  font-size: 0.875rem;
-  font-size: var(--bodyFontSize);
-  font-weight: 400;
-  font-weight: var(--bodyFontWeight);
-  line-height: 1.5;
-  line-height: var(--bodyLineHeight);
-  margin: 0;
-  min-height: 100vh;
-}
-
-/* modules/anchor.css */
-
-:root {
-  --anchorColor: #eee;
-}
-
-a {
-  color: #eee;
-  color: var(--anchorColor);
-  outline: 0;
-  text-decoration: none;
-}
-
-a:focus,
-a:hover {
-  text-decoration: underline;
-}
-
-/* modules/form.css */
-
-:root {
-  --formGap: 0.875rem;
-}
-
-input {
-  background-image: none;
-  border: 0;
-  color: inherit;
-  font: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  -webkit-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-}
-
-input[type="submit"] {
-  cursor: pointer;
-}
-
-.form {
-  display: grid;
-  grid-gap: 0.875rem;
-  gap: 0.875rem;
-  grid-gap: var(--formGap);
-  gap: var(--formGap);
-}
-
-.form input[type="password"],
-.form input[type="text"],
-.form input[type="submit"] {
-  width: 100%;
-}
-
-.form__field {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.form__input {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-
-/* modules/register.css */
-
-:root {
-  --registerBorderRadus: 0.25rem;
-  --registerColor: #eee;
-
-  --registerInputBackgroundColor: #3b4148;
-  --registerInputHoverBackgroundColor: #434a52;
-
-  --registerLabelBackgroundColor: #363b41;
-
-  --registerSubmitBackgroundColor: #ea4c88;
-  --registerSubmitColor: #eee;
-  --registerSubmitHoverBackgroundColor: #d44179;
-}
-
-.register {
-  color: #eee;
-  color: var(--registerColor);
-}
-
-.register label,
-.register input[type="text"],
-.register input[type="password"],
-.register input[type="submit"] {
-  border-radius: 0.25rem;
-  border-radius: var(--registerBorderRadus);
-  padding: 1rem;
-}
-
-.register label {
-  background-color: #363b41;
-  background-color: var(--registerLabelBackgroundColor);
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.register input[type="password"],
-.register input[type="text"] {
-  background-color: #3b4148;
-  background-color: var(--registerInputBackgroundColor);
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-}
-
-.register input[type="password"]:focus,
-.register input[type="password"]:hover,
-.register input[type="text"]:focus,
-.register input[type="text"]:hover {
-  background-color: #434a52;
-  background-color: var(--registerInputHoverBackgroundColor);
-}
-
-.register input[type="submit"] {
-  background-color: #ea4c88;
-  background-color: var(--registerSubmitBackgroundColor);
-  color: #eee;
-  color: var(--registerSubmitColor);
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.register input[type="submit"]:focus,
-.register input[type="submit"]:hover {
-  background-color: #d44179;
-  background-color: var(--registerSubmitHoverBackgroundColor);
-}
-
-/* modules/text.css */
-
-p {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.text--center {
-  text-align: center;
-  color: #93989c;
 }
