New: Alter layout

--- a/ProductivityHub-FE/src/app/pages/about-us/about-us.component.html
+++ b/ProductivityHub-FE/src/app/pages/about-us/about-us.component.html
@@ -1,14 +1,4 @@
-<header>
-  <div class="container mt-3">
-    <a href="#" class="logo">PG <b>Graphics</b></a>
-    <ul class="links">
-      <li>Home</li>
-      <li><a href="/about-us" >About Us</a></li>
-      <li><a href="/dashboard" >Dashboard</a></li>
-      <li><a href="/login" class="text-white">Login</a></li>
-    </ul>
-  </div>
-</header>
+<app-header></app-header>
 <section class="py-5">
 	<div class="container">
 		<div class="row gx-4 align-items-center justify-content-between">
