--- a/ProductivityHub-FE/src/app/pages/home/home.component.html
+++ b/ProductivityHub-FE/src/app/pages/home/home.component.html
@@ -1,16 +1,6 @@
       <!-- Start Landing Page -->
+      <app-header></app-header>
       <div class="landing-page">
-        <header>
-          <div class="container">
-            <a href="#" class="logo">PG <b>Graphics</b></a>
-            <ul class="links">
-              <li>Home</li>
-              <li><a href="/about-us" >About Us</a></li>
-              <li><a href="/dashboard" >Dashboard</a></li>
-              <li><a href="/login" class="login">Login</a></li>
-            </ul>
-          </div>
-        </header>
         <div class="content">
           <div class="container">
             <div class="info">
