--- a/ProductivityHub-FE/src/app/pages/login/login.component.html
+++ b/ProductivityHub-FE/src/app/pages/login/login.component.html
@@ -25,9 +25,9 @@
                 <div data-mdb-input-init class="form-outline mb-4">
                   <label class="form-label" for="form3Example3"><svg class="icon">
                       <use xlink:href="#icon-user"></use>
-                    </svg> Username</label>
-                  <input type="email" id="form3Example3" class="form-control" required [(ngModel)]="loginObj.UserName"
-                    name="UserName" />
+                    </svg> E-mail</label>
+                  <input type="email" id="form3Example3" class="form-control" required [(ngModel)]="loginObj.email"
+                    name="Email" />
                 </div>
 
                 <!-- Password input -->
@@ -36,7 +36,7 @@
                     <use xlink:href="#icon-lock"></use>
                   </svg> Password</label>
                   <input type="password" id="form3Example4" class="form-control" required
-                    [(ngModel)]="loginObj.Password" name="password" />
+                    [(ngModel)]="loginObj.password" name="password" />
                 </div>
 
 
