--- a/ProductivityHub-FE/src/app/pages/home/home.component.html
+++ b/ProductivityHub-FE/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
             <div class="info">
               <h1>Taking care of your commitments</h1>
               <p>Your personal appointment assistant! Select your appointments from the calendar and we will send you messages reminding you. Never forget an important event again!</p>
-              <button>Register now!</button>
+              <button><a href="/login" class="registerNow" style="color: #ffffff;">Register now!</a></button>
             </div>
             <div class="image">
               <img src="https://i.postimg.cc/65QxYYzh/001234.png">
